--- a/css/8_fondos.css
+++ b/css/8_fondos.css
@@ -1,4 +1,6 @@
 body {
+
+    /*pagina de gradientes: https://uigradients.com/#Lawrencium*/
     /*background: navy;*/
     /*background-image: url(https://images.unsplash.com/photo-1765448642340-0503bbba1c73?q=80&w=1166&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);*/
 
