--- a/css/21_float.css
+++ b/css/21_float.css
@@ -9,7 +9,8 @@ body{
     margin: 20px;
 }
 
-/*que es el float: left
+/*.
+que es el float: left
 - Es la propiedad de css que nos va a permitir mandar la imagen a la parte izquierda y */
 
 .imagen{
