--- a/css/23_z_index.css
+++ b/css/23_z_index.css
@@ -10,6 +10,7 @@
     border-radius: 5px;
     position: absolute;
 
+    /*Z-INDEX: nos va a permitir controlar el orden de capas de los elementos posicionados*/
     &.caja-1{
     top: 0px;
     left: 0px;
