Agregar archivos HTML y CSS para un diseño responsivo utilizando Mobile First y propiedades de CSS Grid. Se implementaron estilos para una cuadrícula adaptable y se introdujeron media queries para mejorar la visualización en diferentes dispositivos.

--- a/proyects/Layout/styles.css
+++ b/proyects/Layout/styles.css
@@ -34,25 +34,33 @@ body{
     grid-column: 1 / -1;
     display: flex;
     justify-content: space-between; /*tanto el LOGO como el NAV, quedan tanto a la izq como derecha.*/
-    padding: 10px 20px; 
-    gap: 20px;
+    padding: clamp(5px, 3vw, 10px ) clamp(10px, 3vw, 20px); /*padding: 10px 20px; */
+    gap: clamp(10px, 3vw, 20px); /*gap: 20px;*/
     align-items: center; /*alinea el NAV y el Logo de forma vertical */
 
     .logo{
-        font-size: 50px;
+        font-size: clamp(30px, 5vw, 50px); /*font-size: 50px;*/
     }
 
     nav{
         display: flex;
-        gap: 20px;
+        gap: clamp(10px, 3vw, 20px);
 
         a{
             text-decoration: none;
             color: #531cb3;
-            font-size: 20px;
+            font-size: clamp(10px, 3vw, 20px);
        
         }
     }
+
+   @media screen and (max-width:500px) { /*Lo que hacemos es que si la pantalla es menor a 500px, entonces...*/
+    &{
+        flex-direction: column; /*que en lugar de que el nav este repartido de esquina a esquina, pues que quede CENTRADO EN UNA SOLA COLUMNA*/
+        
+    }
+    
+   }
     
 }
 
@@ -78,6 +86,17 @@ body{
         text-align: center;
 
     }
+
+    @media screen and (max-width: 750px) {
+        &{
+            grid-column: 1 / -1;
+            align-items: stretch;
+
+        }
+        
+    }
+
+    
 }
 
 .aside{
@@ -87,14 +106,20 @@ body{
     border-radius: 10px;
     display: flex;
     justify-content: center;
-    align-items: center
+    align-items: center;
+
+    @media screen and (max-width:750px) {
+        grid-column: 1 / -1;
+        min-height: 200px;
+        
+    }
 }
 
 
 .widgets{
     grid-column: 1 / -1;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /*grid-template-columns: repeat(3, 1fr);*/
     gap: 20px;
 
     .widget{
