--- a/proyects/Startup/src/css/styles.css
+++ b/proyects/Startup/src/css/styles.css
@@ -15,9 +15,41 @@ body {
 
 a{
     text-decoration: none;
-    color: var(--azul-primario);
+    color: var(--azul-secundario);
     &:hover{
         text-decoration:underline;
     }
 
 }
+
+.boton{
+    display: inline-flex; /*los enlaces <a> dentro de .navbar usan iline-flex */
+    padding: 10px 15px;
+    background: var(--azul-primario);
+    transition: 0.2s ease all;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    gap: 10px;
+
+    .icono { /*contenedor del icono*/
+        width: 18px;
+        height: 18px;
+    
+        svg{
+            width: 100%;
+            height: 100%;
+        }
+    
+    }
+
+    &:hover{
+        text-decoration: none;
+        background: var(--azul-hover);
+    }
+    
+}
+
