Agregar nueva sección de características en index.html con carrusel de imágenes y pestañas informativas. Se creó el archivo caracteristicas.css para estilos específicos y se actualizó main.js para incluirlo. Se añadieron estilos en hero.css para la superposición del video

--- a/proyects/Startup/src/css/styles.css
+++ b/proyects/Startup/src/css/styles.css
@@ -53,3 +53,16 @@ a{
     
 }
 
+.contenedor {
+    width: 95%;
+    max-width: 1200px;
+    margin: auto;
+}
+
+.titulo-caracteristicas {
+    font-size: 40px;
+    font-weight: 300;
+    text-align: center;
+    color: var(--azul-secundario);
+    margin-bottom: 40px;
+}
