--- a/proyects/Startup/src/css/hero.css
+++ b/proyects/Startup/src/css/hero.css
@@ -144,4 +144,37 @@
         
     }
 
+    .overlay-video {
+        background: rgba(0, 0, 0, 0.8);
+        position: fixed; /*para que el video se pueda ver sobre la imagen*/
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        display: none; /*queremos que el video se muestre cuando el usuario haga click en el boton de ver video*/
+        justify-content: center;
+        align-items: center;
+
+        &.active {
+            display: flex; /*muestra el video*/
+        }
+
+        .video {
+            width: 50%;
+            height: 400px;
+            border-radius: 10px;
+            overflow: hidden;
+            
+            iframe {
+                width: 100%;
+                height: 100%;
+                aspect-ratio: 16/9;
+            }
+
+        }
+
+
+
+    }
+
 }
