--- a/proyects/Startup/src/css/precios.css
+++ b/proyects/Startup/src/css/precios.css
@@ -1,5 +1,6 @@
 .precios {
     margin-bottom: 100px;
+    
     .grid {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
@@ -72,6 +73,40 @@
             }
         }
 
+        
+    }
+
+    @media screen and (max-width: 992px) {
+        & {
+            margin-bottom: 40px;
+            .grid {
+                grid-template-columns: repeat(3, 1fr);
+               
+
+            }
+        }
+        
+    }
+
+    @media screen and (max-width: 768px) {
+        & {
+            .grid {
+                grid-template-columns: repeat(2, 1fr);
+               
+
+            }
+        }
+        
+    }
+
+    @media screen and (max-width: 568px) {
+        & {
+            .grid {
+                grid-template-columns: 1fr;
+               
+
+            }
+        }
         
     }
 }
