--- a/proyects/Startup/src/css/caracteristicas.css
+++ b/proyects/Startup/src/css/caracteristicas.css
@@ -82,4 +82,47 @@
         }
         
     }
+
+    @media screen and (max-width: 768px) {
+        & {
+            margin-top: 40px;
+            margin-bottom: 40px;
+
+            .grid {
+                .tabs {
+
+                    .tab {
+
+                        .icono {
+                            display: none; /*quita los iconos al llegar al  tamanio minimo*/
+                        }
+
+                    }
+                   
+                }
+            }
+
+        }
+        
+    }
+
+    @media screen and (max-width: 700px) {
+        & {
+            .grid {
+                grid-template-columns: 1fr;
+                gap: 5px;
+
+                .tabs {
+                    grid-template-columns: 1fr 1fr;
+                }
+
+                .previews {
+                    height: 400px;
+                }
+            }
+            
+        }
+
+        
+    }
 }
