--- a/proyects/Startup/src/css/footer.css
+++ b/proyects/Startup/src/css/footer.css
@@ -17,6 +17,13 @@
             width: 20vw;
             max-width: 100px;
         }
+
+        p {
+            margin-bottom: 0;
+            color: rgba(255, 255, 255, 0.5);
+            font-size: 14px;
+
+        }
     }
     
 
@@ -27,6 +34,27 @@
 
         a {
             color: #fff;
+        }
+        
+    }
+
+
+    @media screen and (max-width: 576px) {
+        & {
+            flex-direction: column;
+            justify-content: center;
+            gap: 20px;
+            margin-bottom: 20px;
+
+            .logo {
+                align-items: center;
+                order: 2;
+            }
+
+            .links {
+                justify-content: center;
+                order: 1;
+            }
         }
         
     }
