--- a/proyects/Startup/src/css/header.css
+++ b/proyects/Startup/src/css/header.css
@@ -1,9 +1,20 @@
 .contenedor-header{
-    width: 90%;
+    width: 95%;
     max-width: 1200px;
     margin: auto;
 
+    /*Queremos que el .contenedor-header cuando baje de este tamaño 900px, entonces ocupe el 100%*/
+    @media screen and (max-width: 768px){
+    & {
+        width: 100% !important;
+        max-width: none !important;
+        /* margin-left: 0 !important; */
+        /* margin-right: 0 !important; */
+    }
 }
+}
+
+
 
 header{
     margin-top: 40px;
@@ -69,6 +80,34 @@ header{
             }
     
         }
+    }
+
+
+    /*Media querie para el header(logo y navar)*/
+    @media screen and (max-width: 768px) {
+        & {
+            flex-direction: column;
+            align-items: center;
+            
+            gap: 20px;
+            /*Quitamos el rectangulo y triangulo del logo*/
+            .logo {
+                border-radius: 5px;
+
+                &::before {
+                    display: none;
+                }
+                &::after {
+                    display: none;
+                }
+            }
+
+            .navbar {
+                margin-bottom: 20px ;
+                padding: 0 20px;
+            }
+        }
+        
     }
 
     
