--- a/projects/Portafolio/src/components/layout/Hero.css
+++ b/projects/Portafolio/src/components/layout/Hero.css
@@ -27,6 +27,19 @@
         z-index: 1;
     }
 
+    /* .video-container {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        .video{
+            width: 100%;
+            height: 100%;
+            object-fit: cover; 
+        }
+    } */
+
     .titulo{
         font-family: 'Marriweather', serif;
         font-size: 50px;
@@ -42,6 +55,64 @@
         color: var(--shade-3);
     }
 
+    .botones{
+        display: flex;
+        gap: 10px;
+
+        .boton.transparente{
+            background: rgba(255, 255, 255, 0.10);
+
+            &:hover{
+                background: rgba(255, 255, 255, 0.15);
+            }
+
+
+        }
+
+
+        @media screen and (max-width: 576px) {
+            & {
+                flex-direction: column;
+                align-items: center;
+                .boton{
+                    width: 100%;
+                    justify-content: center;
+                }
+
+
+            }
+            
+        }
+
+    
+
+    }
+
+
+    @media screen and (max-width: 992px ) {
+        &{
+            padding: 40px;
+
+            br { 
+                display: none;
+            }
+
+            .contenido {
+                width: 100%;
+            }
+
+            .titulo{
+                font-size: 32px;
+
+            }
+
+            .botones {
+                justify-content: center;
+
+            }
+        }
+        
+    }
 
 
 }
