Implementación de componentes y estilos del apartado de Trabajos

--- a/projects/Portafolio/src/index.css
+++ b/projects/Portafolio/src/index.css
@@ -77,4 +77,44 @@ a{
         color: #fff;
 
     }
+    
+}
+
+.clientes, 
+.trabajos {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    align-items: center;
+    text-align: center;
+    padding: 60px 20px;
+
+    .encabezado {
+        display: flex;
+        flex-direction: column;
+        gap: 14px;
+        align-items: center;
+
+        .titulo {
+            font-family: 'Merriweather',serif;
+            color: var(--shade-8);
+            font-size: 22px;
+            font-weight: 800;
+
+            .dark &{
+                color: var(--shade-2);
+            }
+        }
+
+        .subtitulo {
+            font-size: 16px;
+            color: var(--shade-6);
+
+            .dark & {
+                color: var(--shade-4);
+            }
+
+
+        }
+    }
 }
