--- a/projects/Portafolio/src/index.css
+++ b/projects/Portafolio/src/index.css
@@ -86,7 +86,7 @@ a{
     flex-direction: column;
     gap: 40px;
     align-items: center;
-    text-align: center;
+    /* text-align: center; */
     padding: 60px 20px;
 
     .encabezado {
