--- a/projects/Portafolio/src/components/layout/Hero.css
+++ b/projects/Portafolio/src/components/layout/Hero.css
@@ -6,6 +6,7 @@
     color: #fff;
     position: relative;
     padding: 120px 80px;
+    
 
     .contenido {
         position: relative;
@@ -27,18 +28,26 @@
         z-index: 1;
     }
 
-    /* .video-container {
+    .video-container {
         position: absolute;
         left: 0;
         top: 0;
         width: 100%;
         height: 100%;
+        opacity: 0; /* Inicialmente invisible para mostrar la imagen de fondo primero */
+        transition: opacity 0.6s ease-in-out; /* Transición suave de la opacidad (0.6 segundos) */
+
+        /* Clase que se agrega mediante React cuando el video carga */
+        &.loaded {
+            opacity: 1; /* Hacemos visible el video */
+        }
+
         .video{
             width: 100%;
             height: 100%;
             object-fit: cover; 
         }
-    } */
+    }
 
     .titulo{
         font-family: 'Marriweather', serif;
