Agregar nuevos componentes AcercaDe y Contacto, junto con sus estilos correspondientes.

--- a/projects/Portafolio/src/index.css
+++ b/projects/Portafolio/src/index.css
@@ -52,6 +52,7 @@ a{
     width: 95%;
     max-width: 1200px;
     margin: auto;
+    margin-bottom: 100px;
 }
 
 .boton {
@@ -81,7 +82,8 @@ a{
 }
 
 .clientes, 
-.trabajos {
+.trabajos,
+.contacto {
     display: flex;
     flex-direction: column;
     gap: 40px;
